<resources>
    <string name="app_name">Secret Chat</string>

    <string name="error_permission">Permission error</string>

    <string name="register_nickname_hint">Please input your nickname</string>
    <string name="register_terms_confirm">I have read and agree to the \"DIM Clauses\".</string>
    <string name="register_agree">You must agree the clauses.</string>
    <string name="register_ok">Let\'s rock!</string>
    <string name="register_failed">Failed to create account!</string>
    <string name="search">Search</string>
    <string name="terms">Terms</string>
    <string name="about">About</string>
    <string name="welcome">Welcome to DIM network!</string>
    <string name="chat_input">Input message</string>
    <string name="chat_send">Send</string>
    <string name="id_seed">Seed</string>
    <string name="id_address">Address</string>
    <string name="search_hint">Input ID/address to search</string>
    <string name="contact_add">Add contact</string>
    <string name="send_message">Send message</string>
    <string name="register">Register</string>
    <string name="main_contacts">Contacts</string>
    <string name="main_chat">SeChat</string>
    <string name="more">More</string>
    <string name="main_me">Me</string>
    <string name="name">Name</string>
    <string name="report">Report</string>
    <string name="clear_history">Clear chat history</string>
    <string name="chatman_show_members">Show all members</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="register_avatar">Please choose an avatar</string>
    <string name="server_connecting">Connecting</string>
    <string name="server_connected">Connected</string>
    <string name="server_handshaking">Handshaking</string>
    <string name="server_error">Network Error</string>
    <string name="server_default">Waiting</string>
    <string name="account_saved">Account saved</string>
    <string name="choose_avatar">Choose</string>
    <string name="clear_history_ok">Chat history cleared</string>
    <string name="group_invite">Invite Participants</string>
    <string name="group_expel">Expel Participants</string>
    <string name="group_owner">Owner</string>
    <string name="group_members_updated">Members updated</string>
    <string name="group_members_error">Members error</string>
    <string name="group_members">Members</string>
    <string name="voice_record_start">Hold to talk</string>
    <string name="voice_record_stop">Release to send</string>
    <string name="downloading">Downloading</string>
    <string name="export_hint">Copy and save your private info carefully.</string>
    <string name="import_hint">Import existing account</string>
    <string name="register_account_error">Account info error</string>
    <string name="contact_remove">Remove contact</string>
    <string name="group_quit">Clear chat history and quit group</string>
    <string name="group_quit_ok">You have quit from this group</string>
    <string name="download_audio_failed">Download audio failed</string>
    <string name="settings">Settings</string>
    <string name="remit_money">Send funds</string>
    <string name="remit_self">Cannot send funds to your self</string>
    <string name="wallet">Wallet</string>
    <string name="recharge">Recharge</string>
    <string name="withdraw">Withdraw</string>
    <string name="transfer">Transfer</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="transfer_sent">Transaction sent</string>
    <string name="transfer_failed">Transfer failed</string>
    <string name="detail">Detail</string>
    <string name="tx_amount">Amount</string>
    <string name="tx_fee">Fee</string>
    <string name="tx_from">From</string>
    <string name="tx_to">To</string>
    <string name="tx_hash">Tx</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="error">Error</string>
    <string name="tx_waiting">Waiting</string>
</resources>
