<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.UpdateAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/avatarView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="@android:color/black"
                    android:gravity="center"
                    android:padding="@dimen/text_margin"
                    android:text="@string/choose_avatar"
                    android:textColor="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/nickname"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/register_nickname_hint"
                android:inputType="textPersonName" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:lines="1"
                        android:text="@string/id_address"
                        android:textColor="@android:color/black"
                        android:textIsSelectable="true"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeTextType="uniform" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export" />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete Account"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>