<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatmanage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chatbox.ChatManageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <chat.dim.ui.grid.FixedGridView
                android:id="@+id/participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="64dp"
                android:horizontalSpacing="4dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="4dp"
                tools:listitem="@layout/participants_grid_item" >

            </chat.dim.ui.grid.FixedGridView>

            <Button
                android:id="@+id/showMembers"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chatman_show_members" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/text_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/nameView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Nickname"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/text_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_address"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/addressView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:lines="1"
                        android:text="Address"
                        android:textColor="@android:color/black"
                        android:textIsSelectable="true"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeTextType="uniform" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/clearHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_history" />

            <Button
                android:id="@+id/quitGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_quit"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
