<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Waiting"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_amount" />


            <TextView
                android:id="@+id/amountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..."
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/tx_fee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/feeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.003480 ETH"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/gasView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="GasPrice(58.00 Gwei) * Gas(60000)"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/tx_to" />

            <TextView
                android:id="@+id/toView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:text="..."
                android:textAlignment="textEnd"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/tx_from" />

            <TextView
                android:id="@+id/fromView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:text="..."
                android:textAlignment="textEnd"
                android:textColor="@android:color/black" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/tx_hash" />

            <TextView
                android:id="@+id/hashView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:text="..."
                android:textAlignment="textEnd"
                android:textColor="@android:color/black" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Refresh" />

</LinearLayout>
